# data-engineer-final-project-tourism-in-canary-islands

./: .env.example  .gitignore  Dockerfile.kestra  README.md  docker-compose.yml  main.py  pyproject.toml
data/raw/backup/: tourist _age_sex.csv  tourist_accommodations.csv  tourist_age_sex.csv  tourist_revenue.csv
dbt/: dbt_project.yml  profiles.yml
dbt/models/mart/: mart_tourists_by_accommodation.sql  mart_tourists_by_demographics.sql
dbt/models/staging/: sources.yml  stg_tourist_accommodations.sql  stg_tourist_age_sex.sql  stg_tourist_revenue.sql
ingestion/: download.py  load_bigquery.py  upload_gcs.py
kestra/: pipeline.yml
processing/: spark_transform.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
